ddnsupdater/ddnsupdater-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ddnsupdater-deployment
  labels:
    app: ddnsupdater
spec:
  selector:
    matchLabels:
      app: ddnsupdater
  template:
    metadata:
      labels:
        app: ddnsupdater
    spec:
      containers:
        - name: ddns
          image: qmcgaw/ddns-updater:latest
          ports:
            - containerPort: 8000
