ddnsupdater/ddnsupdater-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ddnsupdater-service
spec:
  selector:
    app: ddnsupdater
  type: ClusterIP
  ports:
    - name: web
      port: 80
      targetPort: 8000
