ddnsupdater/ddnsupdater-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ddnsupdater
  namespace: ddnsupdater
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/ddnsupdater`)
      services:
      - kind: Service
        name: ddnsupdater
        port: 8000
